testsuite/tests/typecheck/should_fail/tcfail169.stderr
tcfail169.hs:7:51: error: [GHC-39999]
    • Could not deduce ‘Show (Succ a)’
        arising from the second field of ‘Cons’ (type ‘Seq (Succ a)’)
      from the context: Show a
        bound by the deriving clause for ‘Show (Seq a)’
        at tcfail169.hs:7:51-54
      Possible fix:
        use a standalone 'deriving instance' declaration,
          so you can specify the instance context yourself
    • When deriving the instance for (Show (Seq a))

